--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <ul >
-        <li class = "parent"><a href="./Home.html">Home </a></li>
-        <li class = "about"><a href="./about.html">About us</a></li>
-        <li class = "contact"><a href="./contact.html">Contact us</a>  </li>
+        <li class = "parent"><a href="index.html">Home </a></li>
+        <li class = "about"><a href="about.html">About us</a></li>
+        <li class = "contact"><a href="contact.html">Contact us</a>  </li>
     </ul>
     <h1 class ="welcome">Welcome to my page</h1>>
 </body>
